Update App Overflow and Fixed Footer

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ html,body
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+    overflow-x: clip; 
 }
 html {
   scroll-behavior: smooth !important;
